[package]
name = "do-music"
version = "0.10.2"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
cpal = "0.16.0"
futures-util = "0.3.31"
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
opus = "0.3.0"
rand = "0.9.2"
rb = "0.4.1"
tokio = { version = "1.48.0", features = ["full"] }
