[package]
name = "do-music"
version = "0.11.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
cpal = "0.16.0"
futures-util = "0.3.31"
iroh = "0.96.1"
opus = "0.3.0"
postcard = { version = "1.1.3", features = ["use-std"], default-features = false }
rand = "0.9.2"
rb = "0.4.1"
serde = { version = "1.0.228", features = ["alloc"] }
tokio = { version = "1.49.0", features = ["full"] }
