[package]
name = "do-music"
version = "0.15.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
opus = "0.3.1"
quinn = "0.11.9"
rcgen = "0.14.7"
ringbuf = "0.5.0"
tokio = { version = "1.52.1", features = ["full"] }

[features]
stream = []
